--- a/style.css
+++ b/style.css
@@ -1,3 +1,63 @@
 body{
     font-family:"Poppins", sans-serif;
 }
+.container{
+    overflow: hidden;
+}
+.half-width{
+    width: 40%;
+    margin-left: 4%;
+    padding:0 1%;
+    float: left;
+}
+.red-highlight{
+    color:#EC4C77;
+}
+.red-button{
+    background-color:#EC4B74 ;
+    padding: 5px 25px;
+    border-radius:4px;
+    text-decoration: none;
+    color: white;
+    font-weight:500;
+
+}
+.half-width p, .color-gray{
+    color:#707070;
+}
+.m-auto{
+    margin:0 auto;
+}
+.intro-image{
+    width: 100%;
+}
+.text-center{
+    text-align: center;
+    margin-bottom: 50px;
+}
+.third-box{
+    width: 33%;
+    float:left;
+}
+.third-center{
+    width:85%;
+}
+.third-box .third-img{
+    width:100%;
+    margin: 0 2px;
+}
+.clear{
+    clear: both;
+    padding: 2px 0;
+    margin-bottom: 50px;
+}
+.p-area{
+    width: 50%;
+}
+.contact-area{
+    background-color: #EC4C78;
+    padding: 35px 45px;
+    width: 70%;
+    border-radius: 10px;
+    color:white;
+}
